VAN-19118: Fix overlap charactor

--- a/vtr-ui/src/app/components/pages/page-hardwarescan/children/hardware-scan-header-pages/hardware-scan-executing-header/hardware-scan-executing-header.component.scss
+++ b/vtr-ui/src/app/components/pages/page-hardwarescan/children/hardware-scan-header-pages/hardware-scan-executing-header/hardware-scan-executing-header.component.scss
@@ -36,6 +36,9 @@
 			font-size: 3rem;
 		}
 		.progress-complete-text {
+			overflow: hidden; // Use to fix high contrast background
+			margin-bottom: 0.5rem;
+			align-self: flex-end;
 			color: $light;
 			font-size: $fontsize_xs;
 			font-weight: $weight_light;
